src/test/ui/issues/issue-31804.stderr
error: expected pattern, found `}`
  --> $DIR/issue-31804.rs:16:1
   |
LL | } //~ ERROR expected pattern, found `}`
   | ^ expected pattern

error: aborting due to previous error

